# TestRemover

./: .gitignore  Cargo.toml  INSTALLATION.md  README.md  trmv.config.json  trmv.toml
.github/workflows/: rust.yml
src/: constants.rs  index.js  lib.rs  main.rs  util.rs
