[package]
name = "trmv"
description = "Program to remove .spec.lua files in Roblox projects"
version = "1.0.1"
license = "MIT"
authors = ["ReturnedTrue"]
repository = "https://github.com/ReturnedTrue/TestRemover"
include = [
    "src/*",
    "LICENSE.md",
    "README.md"
]

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
crossterm = "0.18.0"
clap = "2.33.3"