[package]
name = "trmv"
version = "1.0.2" # Remember to change the constant!
description = "Program to remove .spec.lua files in Roblox projects"
authors = ["ReturnedTrue"]
keywords = ["gamedev", "roblox", "TestEZ", "automation", "CLI"]
categories = ["command-line-utilities", "game-development"]
license = "MIT"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/ReturnedTrue/TestRemover"
include = [
    "src/*",
    "LICENSE.md",
    "README.md"
]

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
crossterm = "0.18.0"
clap = "2.33.3"